@@ -1,3 +1,9 @@
+2004-02-04  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/sodipodi.c (sodipodi_load_config): Translate filenames to OS
+	encoding
+	(sodipodi_init_config): Ditto
+
 2004-02-04  Michael Schumacher <schumaml@cvs.gnome.org>
 
 	* src/Makefile.am: outdented variables in PLATFORM_WIN32 part
